--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.4.0
+  path: ^1.8.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
