--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.2
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  intl: ^0.19.0
+  firebase_auth: ^5.3.1
 
 dev_dependencies:
   flutter_test:
