--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   cloud_firestore: ^5.4.4
   intl: ^0.19.0
   firebase_auth: ^5.3.1
+  image_picker: ^1.1.2
+  geolocator: ^13.0.2
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
